--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
           aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
           aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -146,6 +148,18 @@
               <h5>Console Game</h5>
               <p>My friend, Jeremy Grimmer, and I created a console adventure game.
                 You must kill monsters, find keys, kill a boss, and work your way to the exit.
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="carousel-item">
+          <a href="https://gearshop.azurewebsites.net/" target="blank"><img
+              src="assets/azurewebsite.jpg" class="d-block w-100" alt="Gear Shop"></a>
+          <a href="https://gearshop.azurewebsites.net/" target="blank">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Peter's Outdoor Gear Emporium</h5>
+              <p>With inspiration from my Static Storefront website, I created a fully-functioning
+                Web MVC that allows the user to shop for and purchase outdoor gear.
               </p>
             </div>
           </a>
